syntax = "proto3";

package livre;

message Livre {
  string id = 1;
  string titre = 2;
  string genre = 3;
  string auteur = 4;
}

message GetLivreRequest {
  string livre_id = 1;
}

message GetLivreResponse {
  Livre livre = 1;
}

message SearchLivresRequest {
  string query = 1;
}

message SearchLivresResponse {
  repeated Livre livres = 1;
}

message CreateLivreRequest {
  string titre = 1;
  string genre = 2;
  string auteur = 3;
}

message CreateLivreResponse {
  Livre livre = 1;
}

message UpdateLivreRequest {
  string id = 1;
  string titre = 2;
  string genre = 3;
  string auteur = 4;
}

message UpdateLivreResponse {
  Livre livre = 1;
}

service LivreService {
  rpc GetLivre(GetLivreRequest) returns (GetLivreResponse);
  rpc SearchLivre(SearchLivresRequest) returns (SearchLivresResponse);
  rpc CreateLivre(CreateLivreRequest) returns (CreateLivreResponse);
  rpc UpdateLivre(UpdateLivreRequest) returns (UpdateLivreResponse); // Ajout de la m√©thode updateLivre
}
